--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kk14569/flarum-theme-hub",
+    "name": "NBJqc/hub",
     "description": "A modern and soft theme designed by 14569 for Flarum.",
     "type": "flarum-extension",
     "version": "v1.1.7",
