--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/kk14569/flarum-theme-hub/issues",
-        "source": "https://github.com/kk14569/flarum-theme-hub",
+        "issues": "https://github.com/NBJqc/hub",
+        "source": "https://github.com/NBJqc/hub",
         "forum": "https://discuss.flarum.org/d/34823"
     },
     "extra": {
